deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petition-count-render
spec:
  replicas: 5
  selector:
    matchLabels:
      app: petition-count
  template:
    metadata:
      name: petition-count-web
      labels:
        app: petition-count
    spec:
      containers:
        - name: webserver
          image: nginx
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: rendered-pages
              mountPath: /usr/share/nginx/html
          readinessProbe:
            httpGet:
              path: /
              port: 80

        - name: counter
          image: registry.gitlab.com/rmasters/petition-counter:10
          command: ["sh", "-c", "while [ true ]; do flask render; sleep 1; done | tee -a /dev/stdout"]
          volumeMounts:
            - name: rendered-pages
              mountPath: /html

      volumes:
        - name: rendered-pages
          emptyDir: {}

      imagePullSecrets:
        - name: registry-gitlab

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: petition-count-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petition-count-fetcher
  template:
    metadata:
      name: petition-count-fetch
      labels:
        app: petition-count-fetcher
    spec:
      containers:
        - name: counter
          image: registry.gitlab.com/rmasters/petition-counter:10
          command: ["sh", "-c", "while [ true ]; do flask track_petition; sleep 5; done | tee -a /dev/stdout"]
      imagePullSecrets:
        - name: registry-gitlab
