deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petition-count-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: petition-count
